--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 			
 			<!-- ###########	END of the UPCOMING EVENTS page	    ###########-->
 			
-			
+		
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->	
-			
+
 			
 			<!-- ###########	START of the KEYNOTE SPEAKER page		###########-->
 			
@@ -311,7 +311,7 @@
 			<!-- The title -->
             <div class="text-center mt-4">
 				<hr>
-                <h3 class="trebuchet"><strong>Keynote Speakers</strong></h3>
+                <h3 class="trebuchet"><strong>2019's Keynote Speakers </strong></h3>
                 <hr>
             </div>
 			
