--- a/index.html
+++ b/index.html
@@ -214,10 +214,9 @@
 					<p class="neg-margin lead">Tickets available here</p>	
 					<hr style="width:100%; display:block">
 						
-						<!> -- Marta trying to add icon for EVENTBRITE and failing -- </!> 
 		
 						<div class="row no-gutters justify-content-center">
-							<a href="https://www.eventbrite.com" class="col-4 far fa-calendar-alt"></a>
+							<a href="https://www.eventbrite.com" class="col-4 fa fa-facebook"></a>
 						</div>
 						
 						<hr class="d-md-none" style="width:100%; display:block">
