--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
 				<!-- SDG 4 -->
                 <div class="imgwrapper mb-2 col-4 col-lg-3 sdg">
                     <img class="img-fluid img-responsive" src="images/sdg4.png">
+			
+			<a href="https://sustainabledevelopment.un.org/sdg4"><img src="images/sdg4.png"></a>
                 </div>
 				
 				<!-- SDG 5 -->
