--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
 			<div class="row mb-md-3 justify-content-center d-md-none">
 			
 				<!-- SDG 4 -->
-                		<div class="imgwrapper mb-2 col-4 col-lg-3 sdg">
-                   	<a href="https://sustainabledevelopment.un.org/sdg4"><img class="img-fluid img-responsive" src="images/sdg4.png"></a>
-		
-      		</div>
+                	<div class="imgwrapper mb-2 col-4 col-lg-3 sdg">
+                    <img class="img-fluid img-responsive" src="images/sdg4.png">	
+
+      </div>
 				
 				
 				<!-- SDG 5 -->
