--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						
 		
 						<div class="row no-gutters justify-content-center">
-							<a href="https://www.eventbrite.com" class="col-4 fa fa-facebook"></a>
+							<a href="https://www.eventbrite.com" class="col-4 fa fa-eventbrite"></a>
 						</div>
 						
 						<hr class="d-md-none" style="width:100%; display:block">
