--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 				Leading our Gender-based Violence session is Maggie Oliver. 
 			    </p>
 			<p>    
-				Maggie resigned from Greater Manchester Police in 2012 in order to expose the handling of the sex abuse ring in Rochdale, Manchester, where young girls were being groomed. She decided to take this onto her own hands by helping young girls’ suffering to be brought to justice. Her mission is to build a safe environment for those who were victims of child abuse and those who remain in abusive environments in Rochdale through her foundation, <b>The Maggie Oliver Foundation</n>. 
+				Maggie resigned from Greater Manchester Police in 2012 in order to expose the handling of the sex abuse ring in Rochdale, Manchester, where young girls were being groomed. She decided to take this onto her own hands by helping young girls’ suffering to be brought to justice. Her mission is to build a safe environment for those who were victims of child abuse and those who remain in abusive environments in Rochdale through her foundation, <b>The Maggie Oliver Foundation</b>. 
 			    </p>
 						
 			<p>
