--- a/index.html
+++ b/index.html
@@ -639,14 +639,14 @@
 					<a href="https://www.instagram.com/oywbath/" class="col-4 col-md-1 fa fa-instagram fa-lg"></a>
 				</div>
 
-				<!--
+				
                 <p>
-                    Questions? Contact us at
+                    Contact us at
                     <a href="mailto:admin@oneyoungworldbath.com" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
                         admin@oneyoungworldbath.com
                     </a>
                 </p>
-				-->
+				
             </div>
         </div>
     </div>
