--- a/index.html
+++ b/index.html
@@ -641,9 +641,11 @@
 
 				
                 <p>
-                    Contact us at
-                    <a href="mailto:admin@oneyoungworldbath.com" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
-                        admin@oneyoungworldbath.com
+			
+			<b> Contact us </b> </p>
+		    <p>
+                    <a If you have any queries or questions contact href="mailto:oywbath@bath.ac.uk" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
+                        oywbath@bath.ac.uk
                     </a>
                 </p>
 				
