--- a/index.html
+++ b/index.html
@@ -643,8 +643,9 @@
                 <p>
 			
 			<b> Contact us </b> </p>
+		    <p> If you have any queries or questions contact </p>
 		    <p>
-                    <a If you have any queries or questions contact href="mailto:oywbath@bath.ac.uk" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
+                    <a href="mailto:oywbath@bath.ac.uk" target="_blank" rel="noopener noreferrer" data-auth="NotApplicable" style="color:#6097AB; text-decoration:underline;">
                         oywbath@bath.ac.uk
                     </a>
                 </p>
