--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<hr style="width:100%; display:block">
 		
 						<div class="row no-gutters justify-content-center">
-							<a href="https://www.eventbrite.com" class="col-4 fa fa-ticket fa-lg"></a>
+							<a href="https://www.eventbrite.co.uk/e/one-young-world-bath-2020-tickets-90782393583" class="col-4 fa fa-ticket fa-lg"></a>
 						</div>
 						
 						<hr class="d-md-none" style="width:100%; display:block">
