--- a/index.html
+++ b/index.html
@@ -219,16 +219,12 @@
 					<p class="neg-margin lead">Tickets available here</p>	
 					<hr style="width:100%; display:block">
 		
-						<!--<div class="row no-gutters justify-content-center">
-							<a href="https://www.eventbrite.co.uk/e/one-young-world-bath-2020-tickets-90782393583" class="col-md-12 col-12 fa fa-ticket fa-lg"><span class="trebuchet">&nbsp; Get your ticket</span></a>
-						<div class="row no-gutters justify-content-center">-->
-						
-
 						<!-- Noscript content for added SEO -->
 						<noscript><a href="https://www.eventbrite.co.uk/e/one-young-world-bath-2020-tickets-90782393583" rel="noopener noreferrer" target="_blank"></noscript>
 						<!-- You can customize this button any way you like -->
 						<div class="row no-gutters justify-content-center">
 							<button id="eventbrite-widget-modal-trigger-90782393583" class="col-md-12 col-12 fa fa-ticket fa-lg btn"><span class="trebuchet">&nbsp; Get your ticket</span></button>
+							<a class="mt-3" href="https://www.eventbrite.co.uk/e/one-young-world-bath-2020-tickets-90782393583"><p>View the event details on EventBrite.</p></a>
 						</div>
 						<noscript></a>Buy Tickets on Eventbrite</noscript>
 
