added contact info

--- a/index.html
+++ b/index.html
@@ -93,16 +93,6 @@
                     </button>-->
                     <!-- END of the contact button -->
                     <!--</div>-->
-
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
         </div>
@@ -679,16 +669,18 @@
             </div>
 
             <p><strong> Contact us! </strong></p>
-            <p> If you have any queries or questions email us: <a href="mailto:oywbath@bath.co.uk" target="_blank">oywbath@bath.ac.uk</a></p>
+            <p>If you have any queries or questions email us: <a href="mailto:oywbath@bath.co.uk" target="_blank">oywbath@bath.ac.uk</a></p>
 
         </div>
     </div>
+
 </div>
+
 <!-- END of the rest of the page -->
 
 <!-- line right at the bottom of the page -->
 <hr>
-
+<p style="font-size: 12px">&nbsp;&nbsp;Created by: <a href="mailto:joe.rd.lynch@gmail.com" target="_blank">joe.rd.lynch@gmail.com</a></p>
 <!-- Do not delete any of these -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
