--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <div id="whatson_title" class="container">
 
                 <!-- START of description page -->
-                <div>
+                <div class="blocks mb-5 pb-1">
                     <!-- The title -->
-                    <div class="text-center mt-3">
-                        <hr>
+                    <div class="text-center mt-3 pt-2">
+                        <hr class="hh">
                         <h3 class="trebuchet"><strong>About the Bath Caucus 2020</strong></h3>
-                        <hr>
+                        <hr class="hh">
                     </div>
 
                     <!-- Description of the event -->
@@ -133,9 +133,9 @@
                             <!-- This includes the SDGs under the description text - it only appears when the screen is not small (not mobile), otherwise the section (below) for the SDGs is used instead! -->
                             <!-- I did this because it looked bad with a massive empty gap after the text, and the map on the right -->
                             <div class="text-center d-none d-md-block">
-                                <hr>
+                                <hr class="hh">
                                 <h5 class="trebuchet"><strong>Our Sustainable Development Goals</strong></h5>
-                                <hr>
+                                <hr class="hh">
                             </div>
 
                             <div class="text-justify">
@@ -283,9 +283,9 @@
 
                         <!-- The title -->
                         <div class="text-center mt-4 d-md-none">
-                            <hr>
+                            <hr class="hh">
                             <h3 class="trebuchet"><strong>Our Sustainable Development Goals</strong></h3>
-                            <hr>
+                            <hr class="hh">
                         </div>
 
                         <!-- First row of sustainable development squares -->
@@ -331,13 +331,13 @@
 
             
                 <!-- START of the 2020 KEYNOTE SPEAKER page -->
-                <div>
+                <div class="blocks pb-3">
 
                     <!-- The title -->
-                    <div class="text-center mt-4">
-                        <hr>
+                    <div class="text-center mt-4 pt-2">
+                        <hr class="hh">
                         <h3 class="trebuchet"><strong>2020's Keynote Speakers </strong></h3>
-                        <hr>
+                        <hr class="hh">
                     </div>
 
 
@@ -346,9 +346,9 @@
 
                         <!-- The title -->
                         <div class="mt-0 mt-md-0 col-12 order-xs-2 order-md-1">
-                            <hr class="st">
+                            <hr class="st hh">
                             <p class="text-center trebuchet speakerTitle lead"><strong>Ahmad Nawaz</strong></p>
-                            <hr class="st1">
+                            <hr class="st1 hh">
                         </div>
 
                         <!-- The photo of ahmad nawaz -->
@@ -386,9 +386,9 @@
 
                         <!-- The title -->
                         <div class="mt-2 mt-md-0 col-12 order-1">
-                            <hr class="st">
+                            <hr class="st hh">
                             <p class="text-center trebuchet speakerTitle lead"><strong>Maggie Oliver</strong></p>
-                            <hr class="st1">
+                            <hr class="st1 hh">
                         </div>
 
                         <!-- The photo of maggie oliver -->
@@ -426,9 +426,9 @@
 
                         <!-- The title -->
                         <div class="mt-2 mt-md-0 col-12 order-md-1">
-                            <hr class="st">
+                            <hr class="st hh">
                             <p class="text-center trebuchet speakerTitle lead"><strong>Noel Williams</strong></p>
-                            <hr class="st1">
+                            <hr class="st1 hh">
                         </div>
 
                         <!-- The photo of noel williams -->
@@ -461,14 +461,13 @@
                 </div>
                 <!-- END of the 2020 KEYNOTE SPEAKER page -->
 
-
                 <!-- START of the 2019 KEYNOTE SPEAKER page -->
-                <div>
+                <div class="blocks pb-3">
                     <!-- The title -->
-                    <div class="text-center mt-5">
-                        <hr>
+                    <div class="text-center mt-5 pt-2">
+                        <hr class="hh">
                         <h3 class="trebuchet"><strong>2019's Keynote Speakers </strong></h3>
-                        <hr>
+                        <hr class="hh">
                     </div>
 
 
@@ -477,9 +476,9 @@
 
                         <!-- The title -->
                         <div class="mt-2 mt-md-0 col-12 order-md-1">
-                            <hr class="st">
+                            <hr class="st hh">
                             <p class="text-center trebuchet speakerTitle lead"><strong>Mary Akongo</strong></p>
-                            <hr class="st1">
+                            <hr class="st1 hh">
                         </div>
 
                         <!-- The photo of mary akongo -->
@@ -522,9 +521,9 @@
 
                         <!-- The title -->
                         <div class="mt-2 mt-md-0 col-12 order-md-1">
-                            <hr class="st"> 
+                            <hr class="st hh"> 
                             <p class=" text-center trebuchet speakerTitle lead"><strong>Caroline Casey</strong></p>
-                            <hr class="st1">
+                            <hr class="st1 hh">
                         </div>
 
                         <!-- The photo of caroline casey -->
@@ -566,12 +565,12 @@
                 <!-- END of the 2019 KEYNOTE SPEAKER page -->
 
                 <!-- START of the DELEGATE'S EXPERIENCE page -->
-                <div>
+                <div class="blocks pb-1">
                     <!-- The title -->
-                    <div class="text-center mt-4 mt-md-5">
-                        <hr>
+                    <div class="text-center mt-4 mt-md-5 pt-2">
+                        <hr class="hh">
                         <h3 class="trebuchet"><strong>Delegate's Experience</strong></h3>
-                        <hr>
+                        <hr class="hh">
                     </div>
 
                     <!-- The picture and the text, the <a> tag works like this:  <a href="link.com"> this text will link to link.com </a> -->
