--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div id="whatson_title" class="container">
 
                 <!-- START of description page -->
-                <div class="blocks mb-5 pb-1">
+                <div class="blocks mb-5 pb-1 pl-3 pr-3 pl-md-5 pr-md-5">
                     <!-- The title -->
                     <div class="text-center mt-3 pt-2">
                         <hr class="hh">
@@ -331,7 +331,7 @@
 
             
                 <!-- START of the 2020 KEYNOTE SPEAKER page -->
-                <div class="blocks pb-3">
+                <div class="blocks pb-3 pb-1 pl-3 pr-3 pl-md-5 pr-md-5">
 
                     <!-- The title -->
                     <div class="text-center mt-4 pt-2">
@@ -462,7 +462,7 @@
                 <!-- END of the 2020 KEYNOTE SPEAKER page -->
 
                 <!-- START of the 2019 KEYNOTE SPEAKER page -->
-                <div class="blocks pb-3">
+                <div class="blocks pb-3 pl-3 pr-3 pl-md-5 pr-md-5">
                     <!-- The title -->
                     <div class="text-center mt-5 pt-2">
                         <hr class="hh">
@@ -565,7 +565,7 @@
                 <!-- END of the 2019 KEYNOTE SPEAKER page -->
 
                 <!-- START of the DELEGATE'S EXPERIENCE page -->
-                <div class="blocks pb-1">
+                <div class="blocks pb-1 pl-3 pr-3 pl-md-5 pr-md-5">
                     <!-- The title -->
                     <div class="text-center mt-4 mt-md-5 pt-2">
                         <hr class="hh">
