--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
                     <!-- The title, trebuchet is the font -->
                     <h2 class="trebuchet text-white" id="oywtitle">
-                        One Young World Bath Caucus 2020
+                        One Young World Bath Caucus 2021
+                        Sunday 7th March
                     </h2>
 
                     <!-- START of the countdown, this code manages the countdown - comment it out or delete it to remove the countdown -->
